--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <title>JavaScript Aj Encoder</title>
-
+<link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
