--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+<center>
     <h1>JavaScript Aj Encoder</h1>
 
     <textarea id="input" placeholder="Enter your JavaScript code here"></textarea>
@@ -25,7 +25,7 @@
     <textarea id="output" placeholder="Your encoded/decoded JavaScript code will appear here"></textarea>
 
     <script src="script.js"></script>
-
+</center>
   </body>
 
 </html>
