--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    
+
+  <div class="background"></div>
+
+  <!-- Your content goes here -->
+
 <center>
     <h1>JavaScript Aj Encoder</h1>
 
